--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                                     <option value="">Bangla</option>
                                 </select>
                             </div> -->
-                            <button class="bg-[red] px-[20px] rounded-[5px] text-white">
+                            <button class="bg-[red] px-[20px] py-[10px] font-bold rounded-[5px] text-white
+                             hover:bg-[rgb(193,17,25)] duration-300">
                                 Sing In
                             </button>
                         </div>
@@ -49,7 +50,8 @@
                             <input type="text" class="border-[1px] border-[#ccc] h-[50px]
                              bg-[transparent] pl-[20px] " placeholder="Email address" >
                              <!-- Get start button -->
-                            <button class="bg-[red] px-[20px] font-bold rounded-[5px] text-white py-[15px]">Get started</button>
+                            <button class="bg-[red] px-[15px] font-bold rounded-[5px] text-[20px]
+                            text-white py-[11px] hover:bg-[rgb(193,17,25)] duration-300">Get started -></button>
                         </form>
                     </div>
                 </div>
@@ -59,7 +61,84 @@
     </header>
     <!-- Header End -->
     <!-- Main start -->
-    <main></main>
+    <main>
+        <!-- Enjoy on your tv section Start -->
+        <section class="w-[100%] bg-[black] border-t-[5px] border-t-[#605d5d] 
+        sm:py-[100px] py-[50px] ">
+            <div class="max-w-[1170px] mx-auto px-[15px]">
+                <div class="grid sm:grid-cols-2 grid-clos-1 items-center">
+                    <div class="text-white">
+                        <h2 class="sm:text-[50px] text-[40px] text-center font-bold">Enjoy on your TV</h2>
+                        <p class="sm:text-[25px] text-[20px] pt-[30px] text-center">Watch on Smart TVs, Playstation, Xbox, Chromecast,<br>
+                         Apple TV, Blu-ray players, and more.</p>
+                    </div>
+                    <!-- Video part -->
+                    <figure class="relative">
+                        <div class="absolute w-[80%] left-[10%] bottom-[20%] z-[1]">
+                            <video >
+                                <source src="img/WhatsApp Video 2023-10-22 at 23.03.13.mp4" >
+                            </video>
+                        </div>
+                        <img class="relative z-[2]" src="img/tv.png" alt="">
+                    </figure>
+                </div>
+            </div>
+        </section>
+        <!-- Enjoy on your tv section End -->
+        <!-- Download Section Start -->
+        <section class="w-[100%] bg-[black] border-t-[5px] border-t-[#605d5d] 
+         sm:py-[100px] py-[50px] ">
+            <div class="max-w-[1170px] mx-auto px-[15px]">
+                <div class="grid sm:grid-cols-2 grid-clos-1 items-center">
+                    <!-- images part -->
+                    <figure class="relative sm:order-1 order-2">
+                        <img src="img/mobile.jpg" alt="">
+                        <!-- 3in1_Box start -->
+                        <div class="bg-[black] sm:w-[60%] w-[80%] absolute sm:left-[20%] left-[10%]
+                        border-[1px] border-[#ccc] bottom-[0px] grid grid-cols-[70%_auto] 
+                        items-center rounded-[15px]">
+                            <div class="grid grid-cols-[25%_auto] gap-[10px] p-[10px]">
+                                <img src="img/boxshot.png" class="" alt="">
+                                <div>
+                                    <h3 class="text-[white] text-[14px] font-bold">Stranger Things</h3>
+                                    <span class="text-[blue]">Downloading...</span>
+                                </div>
+                            </div>
+                            <!-- Download gif -->
+                            <div>
+                                <img class="rounded-r-[15px]" src="img/n2g1.gif" alt="">
+                            </div>
+                        </div>
+                    </figure>
+                    <!-- Download your shows to watch offline Part -->
+                    <div class="text-white sm:order-2 order-1">
+                        <h2 class="sm:text-[50px] text-[40px] text-center font-bold sm:leading-[70px] leading-[50px] ">Download your shows to watch offline</h2>
+                        <p class="sm:text-[25px] text-center text-[20px] pt-[30px]">Save your favorites easily and always have
+                         something to watch.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Download Section End -->
+        <!-- Watch Everywhere Start -->
+        <section class="w-[100%] bg-[black] border-t-[5px] border-t-[#605d5d] 
+        sm:py-[100px] py-[50px] ">
+            <div class="max-w-[1170px] mx-auto px-[15px] ">
+                <div class="grid lg:grid-cols-2 grid-clos-1 items-center ">
+                    <div class="text-white  ">
+                        <h2 class="sm:text-[50px] text-center text-[40px]  font-bold">Watch everywhere</h2>
+                        <p class="sm:text-[25px] text-center text-[20px] pt-[30px]">Stream unlimited movies
+                             and TV shows on your phone, tablet, laptop, and TV.</p>
+                    </div>
+                    <div>
+                        <!-- bug -->
+                    </div>
+                    
+                </div>
+            </div>
+        </section>
+        <!-- Watch Everywhere End -->
+    </main>
     <!-- Main End -->
     <!-- Footer start -->
     <footer></footer>
