--- a/index.html
+++ b/index.html
@@ -138,6 +138,27 @@
             </div>
         </section>
         <!-- Watch Everywhere End -->
+        <!-- Create profiles for kids Start -->
+        <section class="w-[100%] bg-[black] border-t-[5px] border-t-[#605d5d] 
+         sm:py-[100px] py-[50px] ">
+            <div class="max-w-[1170px] mx-auto px-[15px]">
+                <div class="grid sm:grid-cols-2 grid-clos-1 items-center">
+                    <!-- images part -->
+                    <figure class="relative sm:order-1 order-2">
+                        <img src="img/kids.png" alt="">
+                    </figure>
+                    <!-- Download your shows to watch offline Part -->
+                    <div class="text-white sm:order-2 order-1">
+                        <h2 class="sm:text-[50px] text-[40px] text-center font-bold sm:leading-[70px]
+                         leading-[50px] ">Create profiles for kids</h2>
+                        <p class="sm:text-[25px] text-center text-[20px] pt-[30px]">Send kids on
+                             adventures with their favorite characters in a space made just 
+                             for them—free with your membership.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Create profiles for kids Start -->
     </main>
     <!-- Main End -->
     <!-- Footer start -->
