--- a/index.html
+++ b/index.html
@@ -159,10 +159,225 @@
             </div>
         </section>
         <!-- Create profiles for kids Start -->
+        <!-- Frequently Asked Questions Section Start -->
+        <section class="w-[100%] bg-[black] border-t-[5px] border-t-[#605d5d] 
+         sm:py-[100px] py-[50px] ">
+            <div class="max-w-[1170px] mx-auto px-[15px]">
+                <h2 class="sm:text-[50px] text-[40px] text-[white] text-center font-bold sm:leading-[70px]
+                leading-[50px] ">Frequently Asked Questions</h2>
+                <!-- Q&A div start -->
+                <div class="py-[30px]">
+                    <!-- 1 -->
+                    <div class="bg-[#2d2d2d] mb-[15px]">
+                        <!-- For Question -->
+                        <div class="p-[20px] text-white text-[30px] relative 
+                        border-b-[3px] border-[black] hover:bg-[rgb(78,58,78)] 
+                        duration-300 cursor-pointer faqQuestion">
+                            <h3>What is Netflix?</h3>
+                            <span class="absolute right-[30px] top-[15px]">+</span>
+                        </div>
+                        <!-- For Answer -->
+                        <div class="text-[white] text-[20px] scale-y-0 h-[0px] origin-top duration-200">
+                            <p>Netflix is a streaming service that offers
+                                a wide variety of award-winning TV shows,
+                                movies, anime, documentaries, and more on thousands of
+                                internet-connected devices.</p><br>
+                            <p>You can watch as much as you want, whenever you want without a
+                                 single commercial – all for one low monthly price. 
+                                 There's always something new to discover and new TV shows and 
+                                 movies are added every week!</p>
+                        </div>
+                    </div>
+                    <!-- 2 -->
+                    <div class="bg-[#2d2d2d] mb-[15px]">
+                        <!-- For Question -->
+                        <div class="p-[20px] text-white text-[30px] relative 
+                        border-b-[3px] border-[black] hover:bg-[rgb(78,58,78)] 
+                        duration-300 cursor-pointer faqQuestion">
+                            <h3>What is Netflix?</h3>
+                            <span class="absolute right-[30px] top-[15px]">+</span>
+                        </div>
+                        <!-- For Answer -->
+                        <div class="text-[white] text-[20px] scale-y-0 h-[0px] origin-top duration-200">
+                            <p>Netflix is a streaming service that offers
+                                a wide variety of award-winning TV shows,
+                                movies, anime, documentaries, and more on thousands of
+                                internet-connected devices.</p><br>
+                            <p>You can watch as much as you want, whenever you want without a
+                                 single commercial – all for one low monthly price. 
+                                 There's always something new to discover and new TV shows and 
+                                 movies are added every week!</p>
+                        </div>
+                    </div>
+                    <!-- 3 -->
+                    <div class="bg-[#2d2d2d] mb-[15px]">
+                        <!-- For Question -->
+                        <div class="p-[20px] text-white text-[30px] relative 
+                        border-b-[3px] border-[black] hover:bg-[rgb(78,58,78)] 
+                        duration-300 cursor-pointer faqQuestion">
+                            <h3>What is Netflix?</h3>
+                            <span class="absolute right-[30px] top-[15px]">+</span>
+                        </div>
+                        <!-- For Answer -->
+                        <div class="text-[white] text-[20px] scale-y-0 h-[0px] origin-top duration-200">
+                            <p>Netflix is a streaming service that offers
+                                a wide variety of award-winning TV shows,
+                                movies, anime, documentaries, and more on thousands of
+                                internet-connected devices.</p><br>
+                            <p>You can watch as much as you want, whenever you want without a
+                                 single commercial – all for one low monthly price. 
+                                 There's always something new to discover and new TV shows and 
+                                 movies are added every week!</p>
+                        </div>
+                    </div>
+                    <!-- 4 -->
+                    <div class="bg-[#2d2d2d] mb-[15px]">
+                        <!-- For Question -->
+                        <div class="p-[20px] text-white text-[30px] relative 
+                        border-b-[3px] border-[black] hover:bg-[rgb(78,58,78)] 
+                        duration-300 cursor-pointer faqQuestion">
+                            <h3>What is Netflix?</h3>
+                            <span class="absolute right-[30px] top-[15px]">+</span>
+                        </div>
+                        <!-- For Answer -->
+                        <div class="text-[white] text-[20px] scale-y-0 h-[0px] origin-top duration-200">
+                            <p>Netflix is a streaming service that offers
+                                a wide variety of award-winning TV shows,
+                                movies, anime, documentaries, and more on thousands of
+                                internet-connected devices.</p><br>
+                            <p>You can watch as much as you want, whenever you want without a
+                                 single commercial – all for one low monthly price. 
+                                 There's always something new to discover and new TV shows and 
+                                 movies are added every week!</p>
+                        </div>
+                    </div>
+                    <!-- 5 -->
+                    <div class="bg-[#2d2d2d] mb-[15px]">
+                        <!-- For Question -->
+                        <div class="p-[20px] text-white text-[30px] relative 
+                        border-b-[3px] border-[black] hover:bg-[rgb(78,58,78)] 
+                        duration-300 cursor-pointer faqQuestion">
+                            <h3>What is Netflix?</h3>
+                            <span class="absolute right-[30px] top-[15px]">+</span>
+                        </div>
+                        <!-- For Answer -->
+                        <div class="text-[white] text-[20px] scale-y-0 h-[0px] origin-top duration-200">
+                            <p>Netflix is a streaming service that offers
+                                a wide variety of award-winning TV shows,
+                                movies, anime, documentaries, and more on thousands of
+                                internet-connected devices.</p><br>
+                            <p>You can watch as much as you want, whenever you want without a
+                                 single commercial – all for one low monthly price. 
+                                 There's always something new to discover and new TV shows and 
+                                 movies are added every week!</p>
+                        </div>
+                    </div>
+                    <!-- 6 -->
+                    <div class="bg-[#2d2d2d] mb-[15px]">
+                        <!-- For Question -->
+                        <div class="p-[20px] text-white text-[30px] relative 
+                        border-b-[3px] border-[black] hover:bg-[rgb(78,58,78)] 
+                        duration-300 cursor-pointer faqQuestion">
+                            <h3>What is Netflix?</h3>
+                            <span class="absolute right-[30px] top-[15px]">+</span>
+                        </div>
+                        <!-- For Answer -->
+                        <div class="text-[white] text-[20px] scale-y-0 h-[0px] origin-top duration-200">
+                            <p>Netflix is a streaming service that offers
+                                a wide variety of award-winning TV shows,
+                                movies, anime, documentaries, and more on thousands of
+                                internet-connected devices.</p><br>
+                            <p>You can watch as much as you want, whenever you want without a
+                                 single commercial – all for one low monthly price. 
+                                 There's always something new to discover and new TV shows and 
+                                 movies are added every week!</p>
+                        </div>
+                    </div>
+                </div>
+                    <p class="text-[20px] text-white text-center">Ready to watch? Enter your email to create or restart
+                    your membership</p>
+                    <!-- Form start -->
+                    <div class="max-w-[700px] sm:px-[10px] px-[40px] mx-auto mt-[25px]">
+                        <form action="" class="grid sm:grid-cols-[70%_auto] sm:grid-cols-1 gap-[20px]">
+                            <!-- Email input form     -->
+                            <input type="text" class="border-[1px] border-[#ccc] h-[50px]
+                             bg-[transparent] pl-[20px] " placeholder="Email address" >
+                             <!-- Get start button -->
+                            <button class="bg-[red] px-[15px] font-bold rounded-[5px] text-[20px]
+                            text-white py-[11px] hover:bg-[rgb(193,17,25)] duration-300">Get started -></button>
+                        </form>
+                    </div>
+            </div>
+        </section>
+        <!-- Frequently Asked Questions Section End -->
     </main>
     <!-- Main End -->
     <!-- Footer start -->
-    <footer></footer>
+    <footer>
+        <section class="w-[100%] bg-[black] border-t-[5px] border-t-[#605d5d] 
+         sm:py-[60px] py-[50px] ">
+            <div class="max-w-[1170px] mx-auto px-[15px]">
+                <h3 class="text-white underline text-[18px]">Questions? Call <a href="tel:01725547494"> 01725547494</a></h3>
+                <div class="py-[30px] grid  sm:grid-cols-3 grid-cols-1">
+                    <div>
+                        <ul class="text-[#ccc]">
+                            <li class="mb-[10px]"><a class="underline" href="#">Account</a></li>
+                            <li class="mb-[10px]"><a class="underline" href="#">FAQ</a></li>
+                            <li class="mb-[10px]"><a class="underline" href="#">Ways to Watch</a></li>
+                            <li class="mb-[10px]"><a class="underline" href="#">Corporate Information</a></li>
+                            <li class="mb-[10px]"><a class="underline" href="#">Only on Netflix</a></li>
+                        </ul>
+                    </div>
+                    <div>
+                        <ul class="text-[#ccc]">
+                            <li class="mb-[10px]"><a class="underline" href="#">Account</a></li>
+                            <li class="mb-[10px]"><a class="underline" href="#">FAQ</a></li>
+                            <li class="mb-[10px]"><a class="underline" href="#">Ways to Watch</a></li>
+                            <li class="mb-[10px]"><a class="underline" href="#">Corporate Information</a></li>
+                            <li class="mb-[10px]"><a class="underline" href="#">Only on Netflix</a></li>
+                        </ul>
+                    </div>
+                    <div>
+                        <ul class="text-[#ccc]">
+                            <li class="mb-[10px]"><a class="underline" href="#">Account</a></li>
+                            <li class="mb-[10px]"><a class="underline" href="#">FAQ</a></li>
+                            <li class="mb-[10px]"><a class="underline" href="#">Ways to Watch</a></li>
+                            <li class="mb-[10px]"><a class="underline" href="#">Corporate Information</a></li>
+                            <li class="mb-[10px]"><a class="underline" href="#">Only on Netflix</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div>
+                    <select name="" id="" class="bg-[black] text-white border-[1px] border-[white]
+                    sm:p-[5px_25px] p-[5px_20px] rounded-[5px]">
+                        <option value="">English</option>
+                        <option value="">Bangla</option>
+                    </select>
+                </div>
+                <h3 class="text-white pt-[20px]">Netflix Bangladesh</h3>
+                
+            </div>
+        </section>
+        <p class=" text-center"> Shiam Sharif @102023</p>
+    </footer>
     <!-- Footer End -->
 </body>
+<script>
+    let allquestion=document.querySelectorAll(".faqQuestion");
+    allquestion.forEach((v,index)=>{
+        v.addEventListener("click",()=>{
+            v.nextElementSibling.classList.toggle("h-[auto]")
+            v.nextElementSibling.classList.toggle("scale-y-100")
+            v.nextElementSibling.classList.toggle("p-[20px]")
+            v.children[1].classList.toggle("rotate-45")
+
+            allquestion.forEach((el,i)=>{
+                if(i!=index){
+                    el.nextElementSibling.classList.remove("h-[auto]","scale-y-100","p-[20px]")
+                    el.children[1].classList.remove("rotate-45")
+                }
+            })
+        })
+    })
+</script>
 </html>
