--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                 
             </div>
         </section>
-        <p class=" text-center"> ShiamSharif @102023</p>
+        <p class=" text-center"> SHIAMSHARIF @102023</p>
     </footer>
     <!-- Footer End -->
 </body>
